<resources>
    <string name="app_name">سفرة</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_food">طلب طعام</string>
    <string name="sale_food">بيع طعام</string>
    <string name="login">تسجيل الدخول</string>
    <string name="forget_password">هل نسيت كلمة المرور</string>
    <string name="enter">دخول</string>
    <string name="delivery_detail">بيانات التوصيل</string>
    <string name="market_image">صورة المتجر</string>
    <string name="sign">تسجيل</string>
    <string name="name">الاسم</string>
    <string name="title_client">العميل</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">الاشعارات</string>
    <string name="previos_order">الطلبات السابقة</string>
    <string name="current_order">الطلبات الحالية</string>
    <string name="menu">قائمة الطعام</string>
    <string name="comment">التعليقات و التقييم</string>
    <string name="info">معلومات المتجر</string>
    <string name="add_rating">اختار تقييمك</string>
    <string name="choose_rate">اختا تقيمك</string>
    <string name="title_resturant">عنوان المطعم</string>
    <string name="more">المزيد</string>
    <string name="offer">العروض</string>
    <string name="my_offer">عروضي</string>
    <string name="contact_us">تواصل معانا</string>
    <string name="aboutapp">عن التطبيق</string>
    <string name="exit">الخروج</string>
    <string name="do_you_want_to_exit">هل تريد الخروج ؟</string>
    <string name="dont_have_account">ليس لديك حساب ؟</string>
    <string name="press_here">اضغط هنا</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="message">الرساله</string>
    <string name="send">ارسال</string>
    <string name="complaint">شكوي</string>
    <string name="suggestion">اقتراح</string>
    <string name="inquiry">استعلام</string>
    <string name="email">البريد الالكتروني</string>
    <string name="full_name">الاسم كاملا</string>
    <string name="phone">الجوال</string>
    <string name="edit">تعديل</string>
    <string name="status">الحالة</string>
    <string name="name_food">اسم المنتج</string>
    <string name="price">السعر</string>
    <string name="price_on_sale">السعر في العرض</string>
    <string name="time_for_ready">مدة تجهيز الطلب</string>
    <string name="add">اضف</string>
    <string name="comment_rating">التعليقات والتقيم</string>
    <string name="new_order">طلبات جديدة</string>
    <string name="current_orders">طلبات حالية</string>
    <string name="previos_orders">طلبات سابقة</string>
    <string name="call">اتصال</string>
    <string name="accept">قبول</string>
    <string name="refuse">رفض</string>
    <string name="new_offers">جديد العروض</string>
    <string name="add_new_offer">اضف عرض جديد</string>
    <string name="add_name_offer">اسم العرض</string>
    <string name="add_image_offer">اضافة صوره للعرض</string>
    <string name="edit_new_offer">تعديل عرض جديد</string>
    <string name="edit_image_offer">تعديل صوره للعرض</string>
    <string name="get_it_now">احصل عليه الان</string>
    <string name="commission">العمولة</string>
    <string name="restaurant_sales">مبيعات المطعم</string>
    <string name="app_commission">عمولات التطبيق</string>
    <string name="what_has_been_paid">ما تم سداده</string>
    <string name="residual">المتبقي</string>
    <string name="remeber_me">تذكرني</string>
    <string name="done">تم</string>
    <string name="password">الرقم السري</string>
    <string name="confirm_password">تأكيد الرقم السري</string>
    <string name="city">المدينه</string>
    <string name="region">الحي</string>
    <string name="category">الصنف</string>
    <string name="categories">التصنيفات</string>
    <string name="change_password">تغير كلمة المرور</string>
    <string name="detail">التفاصيل</string>
    <string name="offer_detail">تفاصيل العرض</string>
    <string name="exp_desert">مثال : حلويات</string>

</resources>
